--- a/.github/workflows/h68k.yml
+++ b/.github/workflows/h68k.yml
@@ -63,16 +63,15 @@ jobs:
         sudo -E apt -y autoremove --purge
         sudo -E apt clean
 
-    - name: Clone source code
-      run: |
-        df -hT $PWD
-        git clone $REPO_URL -b $REPO_BRANCH openwrt
-        [ -e 040-del-rss-log.patch ] && cp 040-del-rss-log.patch openwrt/package/lean/r8125/patches/040-del-rss-log.patch
+    #- name: Clone source code
+      #run: |
+        #df -hT $PWD
+        #git clone $REPO_URL -b $REPO_BRANCH openwrt
+        #[ -e 040-del-rss-log.patch ] && cp 040-del-rss-log.patch openwrt/package/lean/r8125/patches/040-del-rss-log.patch
 
         # 注释所有 
         #sed -i 's/^TARGET_DEVICES += .*/#&/' openwrt/target/linux/rockchip/image/armv8.mk
-        # 打开 hinlink_opc-h68k 
-        sed -i 's/^#TARGET_DEVICES += hinlink_opc-h68k/TARGET_DEVICES += hinlink_opc-h68k/' openwrt/target/linux/rockchip/image/armv8.mk
+        
 
     - name : checkout 6.0
       run: |
@@ -80,7 +79,8 @@ jobs:
           sed -i 's/5.4/6.0/g' ./target/linux/rockchip/Makefile
           rm -rf package/kernel/mac80211 && rm -rf package/kernel/rtl8821cu
           svn export https://github.com/coolsnowwolf/lede/trunk/package/kernel/mac80211 package/kernel/mac80211
-
+          # 打开 hinlink_opc-h68k 
+          sed -i 's/^#TARGET_DEVICES += hinlink_opc-h68k/TARGET_DEVICES += hinlink_opc-h68k/' openwrt/target/linux/rockchip/image/armv8.mk
 
     - name: Load custom feeds
       run: |
