--- a/.github/workflows/h68k.yml
+++ b/.github/workflows/h68k.yml
@@ -73,17 +73,17 @@ jobs:
         #sed -i 's/^TARGET_DEVICES += .*/#&/' openwrt/target/linux/rockchip/image/armv8.mk
         
 
-    - name : checkout 6.0
-      run: |
-          cd openwrt
-          sed -i 's/5.4/6.0/g' ./target/linux/rockchip/Makefile
-          rm -rf target/linux/rockchip/patches-6.0/021-v6.2-net-phy-add-Motorcomm-YT8531S-phy-id.patch && rm -rf target/linux/rockchip/patches-6.0/108-net-phy-Add-driver-for-Motorcomm-yt8531-gigabit.patch
-          ls target/linux/rockchip/patches-6.0/
-          rm -rf package/kernel/mac80211 && rm -rf package/kernel/rtl8821cu
-          svn export https://github.com/coolsnowwolf/lede/trunk/package/kernel/mac80211 package/kernel/mac80211
+    #- name : checkout 6.0
+      #run: |
+          #cd openwrt
+          #sed -i 's/5.4/6.0/g' ./target/linux/rockchip/Makefile
+          #rm -rf target/linux/rockchip/patches-6.0/021-v6.2-net-phy-add-Motorcomm-YT8531S-phy-id.patch && rm -rf target/linux/rockchip/patches-6.0/108-net-phy-Add-driver-for-Motorcomm-yt8531-gigabit.patch
+          #ls target/linux/rockchip/patches-6.0/
+          #rm -rf package/kernel/mac80211 && rm -rf package/kernel/rtl8821cu
+          #svn export https://github.com/coolsnowwolf/lede/trunk/package/kernel/mac80211 package/kernel/mac80211
           # 打开 hinlink_opc-h68k 
-          sed -i 's/^#TARGET_DEVICES += hinlink_opc-h68k/TARGET_DEVICES += hinlink_opc-h68k/' target/linux/rockchip/image/armv8.mk
-          cat ./target/linux/rockchip/image/armv8.mk
+          #sed -i 's/^#TARGET_DEVICES += hinlink_opc-h68k/TARGET_DEVICES += hinlink_opc-h68k/' target/linux/rockchip/image/armv8.mk
+          #cat ./target/linux/rockchip/image/armv8.mk
     - name: Load custom feeds
       run: |
         [ -e $FEEDS_CONF ] && cp $FEEDS_CONF openwrt/feeds.conf.default
