--- a/.github/workflows/h68k.yml
+++ b/.github/workflows/h68k.yml
@@ -27,7 +27,7 @@ env:
   FEEDS_CONF: h68k.feeds.conf.default
   CONFIG_FILE: h68k.config
   DIY_SHELL: h68k-diy.sh
-  TZ: Asia/Shanghai
+  TZ: America/New_York
 
 
 jobs:
@@ -43,7 +43,7 @@ jobs:
       run : |
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
-        sudo timedatectl set-timezone "Asia/Shanghai"
+        sudo timedatectl set-timezone "America/New_York"
 
     - name: Initialization environment
       env:
