--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ env:
 jobs:
   build:
     name: test
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout
@@ -112,7 +112,7 @@ jobs:
         cd openwrt
 
         echo -e "download package"
-        make download -j8 V=s
+        make download -j8
 
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
