--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ env:
   REPO_URL: https://github.com/Lienol/openwrt.git
   REPO_BRANCH: 21.02
   FEEDS_CONF: test.feeds.conf.default
-  CONFIG_FILE: lienol.default.config
+  CONFIG_FILE: lean.default.config
   DIY_SHELL: h68k-diy.sh
   TZ: America/New_York
 
